# emoji-data

./: .codeclimate.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  AUTHORS.md  CHANGELOG.md  MANIFEST.in  Pipfile  README.md  emoji-zwj-sequences.html  environment.yml  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: python-package.yml
docs/: README.include.md  README.rst  conf.py  emoji_data.character.rst  emoji_data.defines.rst  emoji_data.definitions.rst  emoji_data.rst  emoji_data.sequence.rst  emoji_data.types.rst  emoji_data.utils.rst  emoji_data.version.rst  example.rst  index.rst  modules.rst  requirements.txt
docs/apidocs/: emoji_data.character.rst  emoji_data.definitions.rst  emoji_data.rst  emoji_data.sequence.rst  emoji_data.version.rst
docs/notebooks/: example.ipynb  example.rst
notebooks/: example.ipynb
scripts/: download.ps1  download.py  download.sh
src/emoji_data/: __init__.py  character.py  container.py  defines.py  definitions.py  emoji_data.bak.py  emoji_data.py  exceptions.py  helpers.py  sequence.py  types.py  utils.py  version.py
src/emoji_data/data/: .markdownlint.json  README  README.txt  emoji-data.txt  emoji-variation-sequences.txt  emoji-zwj-sequences.txt
tests/: README  docker-compose.yml  test.sh  test_character.py  test_charactor.py  test_definitions.py  test_initial.py  test_re.py  test_sequence.py
tools/: README  charts-to-json.py  make-cldr.py
